[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=2]
[ext_resource path="res://ganha.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Material freeway/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="ganha" parent="." instance=ExtResource( 3 )]
position = Vector2( 638.66, 64 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 696 )

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 944, 696 )

[node name="HoraCarroRapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="HoraCarroDevagar" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="placar1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "0"
align = 1

[node name="placar2" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.223529, 1, 0.454902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="resultado" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="ponto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ganhou" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="tema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[node name="Button" type="Button" parent="."]
margin_left = 496.0
margin_top = 300.0
margin_right = 796.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 1 )
text = "Reiniciar"

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="pontua2" from="Player2" to="." method="_on_Player2_pontua2"]
[connection signal="timeout" from="HoraCarroRapido" to="." method="_on_HoraCarroRapido_timeout"]
[connection signal="timeout" from="HoraCarroDevagar" to="." method="_on_HoraCarroDevagar_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
